=======
CHANGES
=======

2.6.4 (unreleased)
------------------

- Support CKEditor 4.x (https://bugs.launchpad.net/bugs/1309133)


2.6.3 (2014-04-12)
------------------

New features
++++++++++++

- Switch to CKEditor (https://bugs.launchpad.net/bugs/485898)
- Celery 3 support (https://bugs.launchpad.net/bugs/1276384)
- Latest translations from Launchpad

Bugfixes
++++++++

- Fixed exception dates format in calendar widget of recurring events (https://launchpad.net/bugs/372889)
- Fixed export of deleted timetables (https://launchpad.net/bugs/1281335)
- Updated copyright (https://launchpad.net/bugs/1289277)
- Fixed term/section navigation in a different school year (https://launchpad.net/bugs/1281050)


2.6.2 (2014-02-15)
------------------

- Fix upgrade from a fresh install of version 2.6.0 (https://launchpad.net/bugs/1258529)
- Fix delete year/term if it contains non-ascii chars.
- Updated translations


2.6.1 (2013-11-21)
------------------

- Synchronize timezone set in preferences with timetables and schedules (https://launchpad.net/bugs/1239468)
- Set initial timezone from ``/etc/timezone`` (https://launchpad.net/bugs/1030211)
- Add SchoolTool versions to the Server page.
- Person cannot see his own preferences (https://launchpad.net/bugs/1247825)
- Do not escape extra spaces in comments (https://launchpad.net/bugs/1241022)
- Fix error when trying to replace existing school logo (https://launchpad.net/bugs/1250733)
- Restore the warning about unsaved changes in gradebook, broken after adding
  autocompletion (https://launchpad.net/bugs/1253070)
- Updated translations


2.6.0 (2013-10-10)
------------------

- Don't reverse name order (https://launchpad.net/bugs/1201887)
- Add "Name sorting" option to Server settings, display the selected name
  column first in person tables.
- Person search does not find by full name (https://launchpad.net/bugs/894798)
- Change manager's full name to "Default Manager" (https://launchpad.net/bugs/1227220)